[package]
name = "nofwl"
version = "0.1.0"
edition = "2021"
authors = ["lencx <cxin1314@gmail.com>"]
homepage = "https://github.com/lencx/nofwl"
repository = "https://github.com/lencx/nofwl"
keywords = ["desktop", "plugins", "tauri"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
