[package]
name = "nofwl"
version = "0.1.0"
edition = "2021"
description = "NoFWL Desktop Application"
authors = ["lencx <cxin1314@gmail.com>"]
homepage = "https://github.com/lencx/nofwl"
repository = "https://github.com/lencx/nofwl"
keywords = ["desktop", "plugins", "tauri"]
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
